noinst_LTLIBRARIES = libzchaff.la
noinst_HEADERS = SAT_C.h SAT.h zchaff_base.h zchaff_clsgen.h zchaff_dbase.h zchaff_header.h zchaff_solver.h zchaff_version.h
libzchaff_la_SOURCES =				\
	zchaff_utils.cpp			\
	zchaff_solver.cpp			\
	zchaff_base.cpp				\
	zchaff_dbase.cpp			\
	zchaff_c_wrapper.cpp			\
	zchaff_cpp_wrapper.cpp
